Revert "GitBook: [master] 41 pages modified"
This reverts commit eed77cc6afea67e1f39b9fe7ccc36e6add872974.

--- a/docs/upgrading/v4.md
+++ b/docs/upgrading/v4.md
@@ -1,12 +1,12 @@
-# Upgrade from 3.x to 4.0.0
+## Upgrade from 3.x to 4.0.0
 
 This release introduces changes to error handling.
 
-Previously, the parameter of the rejected promise callback was both the dispatched action and an error object. The middleware also _always_ constructed a new error object, which caused unexpected mutation and circular references.
+Previously, the parameter of the rejected promise callback was both the dispatched action and an error object. The middleware also *always* constructed a new error object, which caused unexpected mutation and circular references.
 
 **Now, the parameter of the rejected promise callback is the value of `reject`.** The middleware does not construct a new error; it is your responsibility to make sure the promise is rejected with an Error object.
 
-```javascript
+```js
 // before
 const bar = () => ({
   type: 'FOO',
@@ -36,13 +36,13 @@ const bar = () => ({
 });
 ```
 
-## 2.x to 3.0.0
+# 2.x to 3.0.0
 
 This release introduces some major changes to the functionality of the middleware:
 
 **First, the middleware returns a promise instead of the action.**
 
-```javascript
+```js
 // before
 const foo = () => ({
   type: 'FOO',
@@ -68,7 +68,7 @@ bar().then(({ value }) => {
 
 **Second, a new promise is created** so `.then()` and `.catch()` work as expected.
 
-```javascript
+``` js
 // before
 const foo = () => ({
   type: 'FOO',
@@ -115,7 +115,7 @@ bar().catch(({ reason }) => {
 
 **Third, promises can be explicitly or implicitly in the action object.**
 
-```javascript
+```js
 // before
 const foo = () => ({
   type: 'FOO',
@@ -133,7 +133,7 @@ const bar = () => ({
 
 Of course, if you prefer the explicit syntax, this still works. This syntax is also required for optimistic updates.
 
-```javascript
+```js
 // after, but with explicit 'promise' property and 'data' property
 const bar = () => ({
   type: 'BAZ',
@@ -146,7 +146,7 @@ const bar = () => ({
 
 **Fourth, thunks are no longer bound to the promise.** If you are chaining actions with Redux Thunk, this is critical change.
 
-```javascript
+```js
 // before, with Redux Thunk
 const foo = () => ({
   type: 'FOO',
@@ -187,4 +187,3 @@ const bar = () => {
   };
 };
 ```
-
