--- a/docs/upgrading/v6.md
+++ b/docs/upgrading/v6.md
@@ -8,7 +8,7 @@ This version includes changes to the public API, making it easier to import and 
 
 Previously, the middleware need to be instantiated with an optional configuration.
 
-```javascript
+```js
 import promiseMiddleware from 'redux-promise-middleware'
 
 applyMiddleware(
@@ -24,7 +24,7 @@ This implementation enabled custom configuration, but, for most implementations,
 
 Now, the default export is preconfigured and ready to go.
 
-```javascript
+```js
 import promise from 'redux-promise-middleware'
 
 applyMiddleware(
@@ -34,7 +34,7 @@ applyMiddleware(
 
 The middleware still supports custom configuration: import `createPromise` and pass in the configuration object.
 
-```javascript
+```js
 import { createPromise } from 'redux-promise-middleware'
 
 applyMiddleware(
@@ -49,13 +49,14 @@ applyMiddleware(
 
 ### Before
 
-```javascript
+
+```js
 import { PENDING, FULFILLED, REJECTED } from 'redux-promise-middleware'
 ```
 
 Previously, the middleware exported three string constants. One each for the pending, fulfilled and rejected action types. This is useful for reducers, for example:
 
-```javascript
+```js
 const reducer = (state = {}, action) => {
   switch(action.type) {
     case `FOO_${PENDING}`:
@@ -69,17 +70,17 @@ const reducer = (state = {}, action) => {
 }
 ```
 
-This is a nice affordance, it could be better design if the action types were exported as an enum \(E.g., an object, since this is just JavaScript\), as opposed three individual strings.
+This is a nice affordance, it could be better design if the action types were exported as an enum (E.g., an object, since this is just JavaScript), as opposed three individual strings.
 
 ### After
 
-```javascript
+```js
 import { ActionType } from 'redux-promise-middleware'
 ```
 
 Now, the action types are exported as one enum.
 
-```javascript
+```js
 const reducer = (state = {}, action) => {
   switch(action.type) {
     case `FOO_${ActionType.Pending}`:
@@ -96,11 +97,12 @@ const reducer = (state = {}, action) => {
 }
 ```
 
-Using action types is entirely optional. One one hand, code benefits from more robust types and is less prone to static errors, but, on another hand, you and your team spends more time and effort writing the code.
+Using action types is entirely optional. One one hand, code benefits from more robust types and is less prone to static errors, but, on another hand, you and your team spends more time and effort writing the code. 
 
 At the end of the day, you can also just use regular strings like any other action.
 
-```javascript
+
+```js
 const reducer = (state = {}, action) => {
   switch(action.type) {
     case `FOO_PENDING`:
@@ -116,4 +118,3 @@ const reducer = (state = {}, action) => {
   }
 }
 ```
-
